@@ -4,6 +4,7 @@ Changes in 0.80.2:
     * cvc co foo=<label> will now work even if you don't have a buildLabel set
     * conary scs will now work more nicely with group changesets
     * conary scs --all no longer shows ids and sha1s
+    * We now never erase pinned items until they are explicity unpinned.
   o Build Changes:
     * It is now possible for a recipe to request that specific individual
       requirements be removed from files (it used to be all or nothing)
